--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,19 +2,36 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_gravity="center_vertical"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:id="@+id/result_text"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textSize="30sp"
-        android:text="Hello World!" />
+        android:layout_gravity="center_horizontal">
+
+        <ImageView
+            android:id="@+id/dice_image1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            app:srcCompat="@drawable/empty_dice"
+            tools:src="@drawable/dice_1"/>
+
+        <ImageView
+            android:id="@+id/dice_image2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            app:srcCompat="@drawable/empty_dice"
+            tools:src="@drawable/dice_1"/>
+
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/roll_button"
@@ -24,10 +41,12 @@
         android:text="@string/roll_label" />
 
     <Button
-        android:id="@+id/count_up_button"
+        android:id="@+id/reset_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="@string/count_up_label" />
+        android:text="@string/reset_label" />
+
+
 
 </LinearLayout>
